# WahalezInjector

./: CMakeLists.txt  README.md
include/: globals.hpp  gui.hpp  helper.hpp  includes.hpp  injector.hpp
src/: globals.cpp  gui.cpp  helper.cpp  injector.cpp  main.cpp
